--- a/be/src/main/resources/application.properties.example
+++ b/be/src/main/resources/application.properties.example
@@ -20,3 +20,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.open-in-view=false
+
+#====================JWT==========================
+SECRET_KEY=
