--- a/be/src/main/resources/application.properties.example
+++ b/be/src/main/resources/application.properties.example
@@ -22,5 +22,8 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.open-in-view=false
 
+# this is an anti-pattern, not recommended to use in serious project
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+
 #====================JWT==========================
 SECRET_KEY=
