--- a/be/pom.xml
+++ b/be/pom.xml
@@ -14,9 +14,10 @@
 	<name>be</name>
 	<description>Jointscamp submission for backend</description>
 	<properties>
-		<maven.compiler.source>1.19</maven.compiler.source>
-		<maven.compiler.target>1.19</maven.compiler.target>
+		<maven.compiler.source>1.17</maven.compiler.source>
+		<maven.compiler.target>1.17</maven.compiler.target>
 		<java.version>17</java.version>
+		<start-class>jointscamp.be.BeApplication</start-class>
 	</properties>
 	<repositories>
 		<repository>
@@ -107,6 +108,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
+					<mainClass>jointscamp.be.BeApplication</mainClass>
 					<excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
@@ -114,14 +116,25 @@
 						</exclude>
 					</excludes>
 				</configuration>
+				<executions>
+					<execution>
+						<id>repackage</id>
+						<goals>
+							<goal>repackage</goal>
+						</goals>
+						<configuration>
+							<classifier>exec</classifier>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.5.1</version>
 				<configuration>
-					<source>19</source>
-					<target>19</target>
+					<source>17</source>
+					<target>17</target>
 					<annotationProcessorPaths>
 						<path>
 							<groupId>org.projectlombok</groupId>
